# scraper_config_generator

./: CONFIG_GENERATOR.md  README.md  __init__.py  feature_extractor.py  generator.py  llm_client.py  pagination_examples.py  prompts.py  pyproject.toml  utils.py  vector_store.py
config_generator/: __init__.py  feature_extractor.py  generator.py  pagination_examples.py  schemas.py  vector_store.py
